Release 0.4-1:
  * Rollback tests.
  * Added flush.console() to push output buffer to osx and windows console.
  * Fixed no quit server when set to FALSE.
  * Tweaked logging.
  * Fixed error when batch() is used on a whitespace line (thanks Panagiotis Cheilaris).
  * Added sendfile() and recvfile().

Release 0.4-0:
  * Fixed warning precedence for small port values.
  * Fixed client timer printing.
  * Added rDevices functions.
  * Added rpng() and its utility functions.
  * Added rhelp(), custom `?`,  and its utility functions.
  * Added hotkey.
  * Added shutdown().
  * Fixed Windows encoding problem.
  * Added option to kill client when 3 consecutive C-c's detected.
  * Fixed eternal warning print bug.
  * Fixed warning reset bug with options(warn = 1).
  * Added batch().
  * Fixed s2c() newname bug that would drop the client.
  * Fixed log restarts on client connect.
  * Added kill().
  * Diverted R message (warning, error, stop) to client.
  * Added wiping out password when server is down.
  * Added environment syncing.
  * Switched to LaTeX vignettes.
  * Added remote machines vignette.
  * Dropped assertthat for reactor.
  * Fixed multiline string input bug.
  * Use argon2 for password hashing.
  * Overhauled vignettes.
  * Display port and internal/external ip's on server creation via getip.
  * Fix some NULL and image file calls when dev.off() and auto_off are needed.

Release 0.3-2:
  * Minor internal cleanup.
  * Improved timer behavior.
  * Fixed s2c() bug.
  * Fixed bug that affected attaching some package namespaces (WCC).
  * Fixed remoter namespace attach bug within the server.

Release 0.3-1:
  * Added "timer" option to client.
  * Added "middleman" functionality via relay().
  * Added blurb about relays to the vignette.
  * Moved password method with masking to getPass package.
  * Integrated getPass() into client authentication.
  * Explicitly namespaced internal use of pbdZMQ functions.

Release 0.3-0:
  * Dumped log output to file.